[project]
name = "ds-60-webinar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.4.2",
    "pandas==2.3.3",
    "streamlit==1.54.0",
    "bokeh==3.8.2",
    "altair[all]==6.0.0",
    "vega_datasets==0.9.0",    
]
